# tree-visualiser

./: CMakeLists.txt  Item.cpp  Item.h  avl.cpp  avl.h  kurevo.cpp  kurevo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rb.cpp  rb.h  readme  splay.cpp  splay.h  tree_space.cpp  tree_space.h  tree_space.ui
